--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="center">
             <div class="topo-header">
                 <div class="logo-header">
-
+                    <img width="160px" src="assets/img/logo-jordana.webp" alt="Dr. Jordana Menez - Psiquiatra">
                 </div>
                 <nav>
                     <ul class="menu-header">
@@ -38,9 +38,16 @@
         </div>
     </header>
 
-    <section>
+    <div class="corpo-site">
 
-    </section>
+        <section>
+            <div class="start-home">
+                <div class="center">
+                    
+                </div>
+            </div>
+        </section>
+    </div>
 
     <footer>
 
