--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 </div>
                 <nav>
                     <ul class="menu-header">
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
+                        <li>Início</li>
+                        <li>Sobre</li>
+                        <li>Atuação</li>
+                        <li>Contato</li>
                     </ul>
                     <div class="social-header">
                         <a href="https://www.facebook.com/" target="_blank">Fa</a>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="home-right">
                             <div class="img-home">
-
+                                <img src="assets/img/img-home.png" alt="Jordana Menez">
                             </div>
                         </div>
                     </div>
@@ -100,9 +100,17 @@
         </section>
 
         <section>
-            <div class="servicos-oferecidos">
+            <div class="areas-atuacao">
                 <div class="center">
-                    <h2>Serviços</h2>
+                    <div class="atuacao">
+                        <h2>Áreas de atuação</h2>
+                        <p>Descubra quais áreas atendo e veja se seu quadro se encaixa no meu perfil</p>
+                    </div>                        
+                    <div class="lista-atuacao">
+                        <div class="atuacao-item">aaa</div>
+                        <div class="atuacao-item">bbb</div>
+                        <div class="atuacao-item">ccc</div>
+                    </div>
                 </div>
             </div>
         </section>
