--- a/index.html
+++ b/index.html
@@ -42,16 +42,28 @@
                         <li>Contato</li>
                     </ul>
                     <div class="social-header">
-                        <a href="https://www.facebook.com/" target="_blank">Fa</a>
-                        <a href="https://www.facebook.com/" target="_blank">Ld</a>
-                        <a href="https://www.facebook.com/" target="_blank">Wp</a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/linkedin.svg" alt="Linkedin Dr. Jordana Menez"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/instagram.svg" alt="Instagram Dr. Jordana Menez"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/email.svg" alt="Email Dr. Jordana Menez"></a>
                     </div>
                 </nav>
                 <div class="btn-menu-mobile">
-                    #
+                    <img width="18px" height="18px" src="assets/img/icons/sandwitch.svg" alt="Menu">
                 </div>
                 <div class="menu-mobile">
-
+                    <nav>
+                        <ul class="menu-mobile-ul">
+                            <li>Início</li>
+                            <li>Sobre</li>
+                            <li>Atuação</li>
+                            <li>Contato</li>
+                        </ul>
+                        <div class="social-mobile">
+                            <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/linkedin.svg" alt="Linkedin Dr. Jordana Menez"></a>
+                            <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/instagram.svg" alt="Instagram Dr. Jordana Menez"></a>
+                            <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/email.svg" alt="Email Dr. Jordana Menez"></a>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
@@ -195,18 +207,23 @@
                 <div class="center">
                     <div class="area-faq">
 
+                        <div class="area-faq-topo">
+                            <h2>Perguntas Frequentes</h2>
+                            <hr>
+                        </div>
+
                         <div id="accordion">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            Collapsible Group Item #1
+                                            Quais são os sintomas comuns de problemas de saúde mental?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                     <div class="card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                        Os sintomas de problemas de saúde mental variam, mas podem incluir alterações no humor, ansiedade, irritabilidade, problemas de sono, dificuldade de concentração, mudanças no apetite e pensamentos suicidas.
                                     </div>
                                 </div>
                             </div>
@@ -215,13 +232,13 @@
                                 <div class="card-header" id="headingTwo">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            Collapsible Group Item #2
+                                            Quando devo procurar a ajuda de um psiquiatra?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                     <div class="card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                        Você deve considerar buscar ajuda de um psiquiatra se estiver enfrentando dificuldades significativas em sua saúde mental, como sintomas persistentes, problemas de relacionamento, dificuldades no trabalho ou estudos, ou se estiver tendo pensamentos suicidas.
                                     </div>
                                 </div>
                             </div>
@@ -230,13 +247,73 @@
                                 <div class="card-header" id="headingThree">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            Collapsible Group Item #3
+                                            Quais são os tipos de tratamentos oferecidos pela psiquiatria?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                     <div class="card-body">
-                                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                        A psiquiatria oferece uma variedade de tratamentos, incluindo psicoterapia, medicação, terapia cognitivo-comportamental, terapia de grupo e abordagens complementares, como a terapia ocupacional.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header" id="headingFour">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                            Quanto tempo dura um tratamento psiquiátrico?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                                    <div class="card-body">
+                                        A duração do tratamento psiquiátrico varia de acordo com a gravidade do problema e as necessidades individuais. Pode ser de curto prazo para questões específicas ou de longo prazo para condições crônicas.
+                                    </div>
+                                </div>
+                            </div>
+
+                             <div class="card">
+                                <div class="card-header" id="headingFive">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                            A psiquiatria é apenas para pessoas com transtornos mentais graves?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                                    <div class="card-body">
+                                        Não, a psiquiatria é para pessoas com uma ampla gama de problemas de saúde mental, desde questões mais leves até transtornos mais graves. Um psiquiatra pode ajudar em diversas situações.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header" id="headingSix">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                            É possível tratar problemas de saúde mental sem medicação?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                                    <div class="card-body">
+                                        Sim, o tratamento de problemas de saúde mental não se limita apenas à medicação. A terapia psicológica, como a psicoterapia, pode ser eficaz para muitas condições, e abordagens complementares, como mudanças no estilo de vida, também podem desempenhar um papel importante.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="card-header" id="headingSeven">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                                            Os serviços de um psiquiatra são confidenciais?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
+                                    <div class="card-body">
+                                        Sim, os psiquiatras estão comprometidos com a confidencialidade dos pacientes. As informações compartilhadas durante as sessões são protegidas por lei, a menos que haja risco iminente para a segurança do paciente ou de terceiros.
                                     </div>
                                 </div>
                             </div>
@@ -262,13 +339,15 @@
     <footer>
         <div class="center">
             <div class="footer-content">
-                <img src="assets/img/logo-dark.png" height="70px" alt="Psiquiatra Jordana Menez">
+                <div class="logo-footer">
+                    <img src="assets/img/logo-dark.png" height="70px" alt="Psiquiatra Jordana Menez">
+                </div>
                 <div class="footer-right">
-                    <h3>Me encontre nas redes</h3>
+                    <h4>Me encontre nas redes</h4>
                     <div class="social-footer">
-                        <a href="https://www.facebook.com/" target="_blank">Fa</a>
-                        <a href="https://www.facebook.com/" target="_blank">Ld</a>
-                        <a href="https://www.facebook.com/" target="_blank">Wp</a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/linkedin.svg" alt="Linkedin Dr. Jordana Menez"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/instagram.svg" alt="Instagram Dr. Jordana Menez"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/email.svg" alt="Email Dr. Jordana Menez"></a>
                     </div>
                 </div>
             </div>
