--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
                 </div>
                 <nav>
                     <ul class="menu-header">
-                        <li>Início</li>
-                        <li>Sobre</li>
-                        <li>Atuação</li>
-                        <li>Contato</li>
+                        <a href="#section-home"><li>Início</li></a>
+                        <a href="#section-sobre"><li>Sobre</li></a>
+                        <a href="#section-atuacao"><li>Atuação</li></a>
+                        <a href="#section-faq"><li>FAQ</li></a>
+                        <a href="#section-contato"><li>Contato</li></a>
                     </ul>
                     <div class="social-header">
                         <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/linkedin.svg" alt="Linkedin Dr. Jordana Menez"></a>
@@ -53,11 +54,14 @@
                 <div class="menu-mobile">
                     <nav>
                         <ul class="menu-mobile-ul">
-                            <li>Início</li>
-                            <li>Sobre</li>
-                            <li>Atuação</li>
-                            <li>Contato</li>
+                            <a href="#section-home"><li>Início</li></a>
+                            <a href="#section-sobre"><li>Sobre</li></a>
+                            <a href="#section-atuacao"><li>Atuação</li></a>
+                            <a href="#section-faq"><li>FAQ</li></a>
+                            <a href="#section-contato"><li>Contato</li></a>
                         </ul>
+                        <hr style="margin:0;width:100%;border:1px solid #113e0f;">
+                        <p style="font-weight: 600;color:#FFF;margin:0;text-align: center;">Me encontre nas redes:</p>
                         <div class="social-mobile">
                             <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/linkedin.svg" alt="Linkedin Dr. Jordana Menez"></a>
                             <a href="https://www.facebook.com/" target="_blank"><img width="18px" height="18px" src="assets/img/icons/instagram.svg" alt="Instagram Dr. Jordana Menez"></a>
@@ -71,7 +75,7 @@
 
     <div class="corpo-site">
 
-        <section>
+        <section id="section-home">
             <div class="start-home">
                 <div class="center">
                     <div class="home-flex">
@@ -94,7 +98,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="section-sobre">
             <div class="sobre-mim">
                 <div class="area-img-sobre-mim">
                     <img class="img-sobre-mim" src="assets/img/sobre-mim.jpg" alt="Jordana Menez Psiquiatra">
@@ -117,7 +121,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="section-atuacao">
             <div class="areas-atuacao">
                 <div class="center">
                     <div class="atuacao">
@@ -202,7 +206,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="section-faq">
             <div class="faq">
                 <div class="center">
                     <div class="area-faq">
@@ -351,6 +355,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="rodape">
+             <div>Dr. Jordana Menez © 2023 | Todos os direitos reservados.</div>
+             <a href="politica-privacidade.html">Política de Privacidade</a> 
+             <a href="termos-uso.html">Termos de Uso</a>
+             <div>Desenvolvido por <a href="#">Felipe Palmeira</a></div>
         </div>
 
         <a class="wpp-flutuante" href="#">
