--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         </div>
     </header>
 
-    <div class="corpo-site">
+    <div class="corpo-site" id="section-home">
 
-        <section id="section-home">
+        <section>
             <div class="start-home">
                 <div class="center">
                     <div class="home-flex">
@@ -357,7 +357,8 @@
             </div>
         </div>
         <div class="rodape">
-             <div>Dr. Jordana Menez © 2023 | Todos os direitos reservados.</div>
+             <div>Dr. Jordana Menez © 2023</div> 
+             <div>Todos os direitos reservados.</div>
              <a href="politica-privacidade.html">Política de Privacidade</a> 
              <a href="termos-uso.html">Termos de Uso</a>
              <div>Desenvolvido por <a href="#">Felipe Palmeira</a></div>
