--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     
     <!-- Scripts -->
     <script src="assets/js/script.js"></script>
@@ -26,6 +28,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -370,15 +373,15 @@
                                 </div>
                             </div>
                             <div class="clinica-item">
-                                <h4>Pax Clínica</h4>
+                                <h4>Flore.Ser</h4>
                                 <hr class="hr-green-low">
                                 <div class="clinica-option">
                                     <img src="assets/img/icons/tel.png" width="30px" height="30px" alt="Telefone">
-                                    <div class="option-txt">(62) 99687-7327 | (62) 3085-1362</div>
+                                    <div class="option-txt">(62) 98115-7656</div>
                                 </div>
                                 <div class="clinica-option">
                                     <img src="assets/img/icons/local.png" width="30px" height="30px" alt="Local">
-                                    <div class="option-txt">Rodovia BR 153, km 505 sul Villasul V - Nossa Sra, GO, 74911-506</div>
+                                    <div class="option-txt">Rua benjamim Santos Qd 12 Lt 02, Jardim Todos os Santos, Senador Canedo</div>
                                 </div>
                             </div>
                             <div class="crm-contato">
@@ -395,6 +398,45 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="section-galeria">
+            <div class="center">
+                <div class="galeria-topo">
+                    <h2>Galeria</h2>
+                    <hr class="hr-low-red">
+                    <p>Confira algumas fotos do ambiente onde atendo.</p>
+                </div>
+                <div class="area-galeria">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="img-slide">
+                                    <img src="jordana/fotos/1.jpg" alt="Jordana">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="img-slide">
+                                    <img src="jordana/fotos/2.jpg" alt="Jordana">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="img-slide">
+                                    <img src="jordana/fotos/3.jpg" alt="Jordana">
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="img-slide">
+                                    <img src="jordana/fotos/4.jpg" alt="Jordana">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
                     </div>
                 </div>
             </div>
@@ -429,5 +471,21 @@
             <img width="60px" src="assets/img/icons/wpp-flutuante.png" alt="Whatsapp">
         </a>
     </footer>
+
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+          slidesPerView: 1,
+          spaceBetween: 30,
+          loop: true,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+    </script>
 </body>
 </html>
