--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="sobre-right">
                             <h2>Sobre mim</h2>
                             <hr class="hr-low-red">
-                            <p data-anime="right">Olá! Sou a Dra. Jordana Menez, uma psiquiatra formada pela Universidade Federal de Goiás (UFG) e com especialização em Psiquiatria também pela UFG. Com anos de experiência clínica, minha abordagem de tratamento é baseada em evidências e personalizada para atender às necessidades únicas de cada paciente. Trabalho em parceria com meus pacientes, oferecendo um espaço seguro e acolhedor para explorar suas preocupações, emoções e metas de vida. Meu objetivo é fornecer cuidados de saúde mental abrangentes e empáticos, ajudando meus pacientes a alcançarem uma vida saudável e equilibrada.</p> 
+                            <p data-anime="right">Olá! Sou a Dra. Jordana Menez, uma psiquiatra formada pela Universidade Federal de Goiás (UFG) e com especialização em Psiquiatria pela Pax Instituto de Psiquiatria. Minha abordagem de tratamento é baseada em evidências e personalizada para atender às necessidades únicas de cada paciente. Trabalho em parceria com meus pacientes, oferecendo um espaço seguro e acolhedor para explorar suas preocupações, emoções e metas de vida. Meu objetivo é fornecer cuidados de saúde mental abrangentes e empáticos, ajudando meus pacientes a alcançarem uma vida saudável e equilibrada.</p> 
                             <a data-anime="right" class="btn-red" href="#section-contato">ME ENCONTRE NAS REDES</a> 
                         </div>
                     </div>
@@ -249,12 +249,12 @@
                                 </div>
                                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                     <div class="card-body">
-                                        Você deve considerar buscar ajuda de um psiquiatra se estiver enfrentando dificuldades significativas em sua saúde mental, como sintomas persistentes, problemas de relacionamento, dificuldades no trabalho ou estudos, ou se estiver tendo pensamentos suicidas.
+                                        Você deve considerar buscar ajuda se estiver enfrentando dificuldades de sono, irritabilidade ou tristeza excessivas, pensamentos de morte, descontrole com gastos, bem como outras alterações que impactem na qualidade de vida.
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card">
+                            <!-- <div class="card">
                                 <div class="card-header" id="headingThree">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -267,7 +267,7 @@
                                         A psiquiatria oferece uma variedade de tratamentos, incluindo psicoterapia, medicação, terapia cognitivo-comportamental, terapia de grupo e abordagens complementares, como a terapia ocupacional.
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="card">
                                 <div class="card-header" id="headingFour">
