finalização das páginas

--- a/index.html
+++ b/index.html
@@ -136,72 +136,72 @@
                         <p>Descubra quais áreas atendo e veja se seu quadro se encaixa no meu perfil</p>
                     </div>                        
                     <div data-anime="left" class="lista-atuacao">
-                        <div class="atuacao-item">
+                        <a href="/paginas/transtorno-depressao-maior.html" class="atuacao-item">
                             <h4>Transtorno depressão maior</h4>
                             <hr class="hr-low-red">
                             <p>Uma condição de saúde mental caracterizada por tristeza persistente, perda de interesse, falta de energia e outros sintomas que afetam negativamente o funcionamento diário.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/transtorno-afetivo-bipolar.html" class="atuacao-item">
                             <h4>Transtorno afetivo bipolar</h4>
                             <hr class="hr-low-red">
                             <p>Condição mental com episódios de humor extremo alternando entre mania (euforia, energia elevada) e depressão (tristeza profunda). Requer diagnóstico e tratamento profissional para gerenciar os episódios de forma adequada.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/transtornos-ansiosos.html" class="atuacao-item">
                             <h4>Transtornos ansiosos</h4>
                             <hr class="hr-low-red">
                             <p>Condições de saúde mental com experiência persistente e excessiva de ansiedade, acompanhada por preocupações intensas, medos irracionais e sintomas físicos.</p>
-                        </div>
+                        </a>
                     </div>
                     <div data-anime="right" class="lista-atuacao">
-                        <div class="atuacao-item">
+                        <a href="/paginas/toc.html" class="atuacao-item">
                             <h4>Transtorno obsessivo compulsivo (TOC)</h4>
                             <hr class="hr-low-red">
                             <p>Condição de saúde mental caracterizada por pensamentos intrusivos persistentes e preocupações obsessivas, que levam a comportamentos repetitivos e rituais compulsivos.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/esquizofrenia.html" class="atuacao-item">
                             <h4>Esquizofrenia e outros transtornos psicóticos</h4>
                             <hr class="hr-low-red">
                             <p>Condições de saúde mental com alterações no pensamento, percepção, emoção e comportamento. Podem incluir alucinações, delírios e dificuldade em distinguir realidade e fantasia.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/transtornos-alimentares.html" class="atuacao-item">
                             <h4>Transtornos alimentares</h4>
                             <hr class="hr-low-red">
                             <p>Condições de saúde mental com comportamentos e pensamentos prejudiciais sobre alimentação e imagem corporal. Exemplos: anorexia nervosa, bulimia nervosa e transtorno da compulsão alimentar periódica (TCAP).</p>
-                        </div>
+                        </a>
                     </div>
                     <div data-anime="left" class="lista-atuacao">
-                        <div class="atuacao-item">
+                        <a href="/paginas/dependecias-alcoolica-e-quimica.html" class="atuacao-item">
                             <h4>Dependências alcoólica e química</h4>
                             <hr class="hr-low-red">
                             <p>Condições em que há dependência física e psicológica do álcool ou substâncias químicas, resultando em consumo compulsivo e descontrolado. Afetam negativamente a vida diária, relacionamentos e saúde geral.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/reacoes-ao-estresse-e-luto.html" class="atuacao-item">
                             <h4>Reações ao estresse e luto</h4>
                             <hr class="hr-low-red">
                             <p>Experiências emocionais comuns. Reações ao estresse envolvem respostas físicas, mentais e emocionais em situações estressantes. O luto é o processo de adaptação emocional após a perda de algo significativo.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/deficit-de-atencao-e-hiperatividade.html" class="atuacao-item">
                             <h4>Déficit de atenção e hiperatividade</h4>
                             <hr class="hr-low-red">
                             <p>Transtorno neurobiológico com sintomas de desatenção, hiperatividade e impulsividade. Pode afetar crianças, adolescentes e adultos. Requer tratamento que combina terapia comportamental, estratégias educacionais e, às vezes, medicamentos.</p>
-                        </div>
+                        </a>
                     </div>
                     <div data-anime="right" class="lista-atuacao">
-                        <div class="atuacao-item">
+                        <a href="/paginas/transtorno-espectro-autista.html" class="atuacao-item">
                             <h4>Transtorno espectro autista (TEA)</h4>
                             <hr class="hr-low-red">
                             <p>Condição que afeta comunicação, interação social e comportamento. Caracterizada por dificuldades sociais, comportamentos repetitivos e interesses restritos. Requer tratamento e apoio para desenvolver habilidades sociais e de comunicação.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/transtornos-de-personalidade.html" class="atuacao-item">
                             <h4>Transtornos de personalidade</h4>
                             <hr class="hr-low-red">
                             <p>Condições de saúde mental com padrões rígidos e disfuncionais de pensamentos, emoções e comportamento. Podem envolver dificuldades interpessoais, instabilidade emocional e impulsividade. O tratamento envolve terapia para melhorar a qualidade de vida.</p>
-                        </div>
-                        <div class="atuacao-item">
+                        </a>
+                        <a href="/paginas/transtornos-de-sexualidade.html" class="atuacao-item">
                             <h4>Transtornos de sexualidade</h4>
                             <hr class="hr-low-red">
                             <p>Condições de saúde mental com comportamentos e atrações sexuais disfuncionais. Podem incluir disfunção erétil, transtorno de desejo sexual, identidade de gênero e parafilias. Requerem tratamento terapêutico.</p>
-                        </div>
+                        </a>
                     </div>
 
                     <div data-anime="top" class="lista-atuacao">
