--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <!-- Scripts -->
     <script src="assets/js/script.js"></script>
     <script defer src="assets/js/animation.js"></script>
@@ -97,7 +98,7 @@
                         </div>
                         <div class="home-right">
                             <div class="img-home">
-                                <img src="assets/img/img-home.png" alt="Jordana Menez">
+                                <img src="assets/img/img-home.webp" alt="Jordana Menez">
                             </div>
                         </div>
                     </div>
@@ -108,10 +109,10 @@
         <section id="section-sobre">
             <div class="sobre-mim">
                 <div class="area-img-sobre-mim">
-                    <img class="img-sobre-mim" src="assets/img/sobre-mim.jpg" alt="Jordana Menez Psiquiatra">
+                    <img class="img-sobre-mim" src="assets/img/sobre-mim.webp" alt="Jordana Menez Psiquiatra">
                 </div>
                 <div class="area-bg-sobre-mim">
-                    <img style="opacity: 0.08;" class="img-sobre-mim" src="assets/img/bg-sobre.png" alt="Jordana Menez Psiquiatra">
+                    <img style="opacity: 0.08;" class="img-sobre-mim" src="assets/img/bg-sobre.webp" alt="Jordana Menez Psiquiatra">
                 </div>
                 <div class="center">
                     <div class="sobre-flex">
@@ -426,22 +427,22 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="img-slide">
-                                    <img src="jordana/fotos/1.jpg" alt="Jordana">
+                                    <img src="jordana/fotos/1.webp" alt="Jordana">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="img-slide">
-                                    <img src="jordana/fotos/2.jpg" alt="Jordana">
+                                    <img src="jordana/fotos/2.webp" alt="Jordana">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="img-slide">
-                                    <img src="jordana/fotos/3.jpg" alt="Jordana">
+                                    <img src="jordana/fotos/3.webp" alt="Jordana">
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="img-slide">
-                                    <img src="jordana/fotos/4.jpg" alt="Jordana">
+                                    <img src="jordana/fotos/4.webp" alt="Jordana">
                                 </div>
                             </div>
                         </div>
@@ -464,7 +465,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao1.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao1.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Felipe P
                                 </div>
@@ -496,7 +497,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao2.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao2.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Letícia Palmeira
                                 </div>
@@ -528,7 +529,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao3.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao3.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Wendyson Duarte de Oliveira
                                 </div>
@@ -560,7 +561,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao4.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao4.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Paulo Cascao
                                 </div>
@@ -592,7 +593,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao5.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao5.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Pedro I da Silva
                                 </div>
@@ -626,7 +627,7 @@
                     <div class="avaliacao-item">
                         <div class="avaliacao-topo">
                             <div class="avaliacao-topo-img-nome">
-                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao6.png" alt="Avaliação">
+                                <img width="35px" height="35px" src="assets/img/avalicoes/avaliacao6.webp" alt="Avaliação">
                                 <div class="avaliacoes-topo-nome">
                                     Beatriz Mendonça Borges
                                 </div>
@@ -668,7 +669,7 @@
         <div class="center">
             <div class="footer-content">
                 <div class="logo-footer">
-                    <img src="assets/img/logo-dark.png" height="70px" alt="Psiquiatra Jordana Menez">
+                    <img src="assets/img/logo-dark.webp" height="70px" alt="Psiquiatra Jordana Menez">
                 </div>
                 <div class="footer-right">
                     <h4>Me encontre nas redes</h4>
