--- a/paginas/transtorno-afetivo-bipolar.html
+++ b/paginas/transtorno-afetivo-bipolar.html
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     
     <!-- Scripts -->
     <script src="../assets/js/script.js"></script>
@@ -104,7 +105,7 @@
         <div class="center">
             <div class="footer-content">
                 <div class="logo-footer">
-                    <img src="../assets/img/logo-dark.png" height="70px" alt="Psiquiatra Jordana Menez">
+                    <img src="../assets/img/logo-dark.webp" height="70px" alt="Psiquiatra Jordana Menez">
                 </div>
                 <div class="footer-right">
                     <h4>Me encontre nas redes</h4>
